--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 
-jwt.secret=yourSecretKey
+
+
+jwt.secret=kpeFh5tKpP5ypf8lN1xX9S7DOPyJUUpy8iIVSX0kG4k=
 jwt.expiration=3600
