--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,5 +1,5 @@
 HELP.md
-../target/
+target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -28,6 +28,7 @@ HELP.md
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
 
 ### VS Code ###
 .vscode/
