--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url= jdbc:postgresql://database:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.username = postgres
@@ -10,6 +10,21 @@ spring.jpa.hibernate.ddl-auto=create
 
 
 spring.jpa.show-sql=true
+
+# Database connection properties
+#spring.datasource.url=jdbc:h2:mem:gamingdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=username
+#spring.datasource.password=password
+#
+## Hibernate properties
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create
+#
+## Optional: H2 console configuration
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
 
 
 
