--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
   frontend:
     build: ./webapp
     ports:
-      - 3000:3000
+      - 3000:80  # Map port 80 of the frontend container to port 3000 on the host
+    networks:
+      - app-network
 
   backend:
     build: ./api
@@ -16,6 +18,8 @@ services:
       - SPRING_DATASOURCE_PASSWORD=postgres
     depends_on:
       - database
+    networks:
+      - app-network
 
   database:
     image: postgres:14.1-alpine
@@ -27,6 +31,23 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - 80:80  # Map port 80 of the nginx container to port 80 on the host
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf  # Mount the nginx.conf file
+    depends_on:
+      - frontend
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   dbdata:
