--- a/api/nginx/nginx.conf
+++ b/api/nginx/nginx.conf
@@ -6,11 +6,11 @@ http {
     server_name localhost;
 
     location / {
-      proxy_pass http://frontend:80;  # Forward requests to the frontend contai>
+      proxy_pass http://localhost:80;  # Forward requests to the frontend contai>
     }
 
     location /api/ {
-        proxy_pass http://backend:8080;
+        proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
