--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,19 @@ version: "3.8"
 services:
   frontend:
     container_name: dockerwebsite_frontend_1
-    build: ./webapp
+    build:
+      context: ./webapp
+      dockerfile: Dockerfile
     ports:
-      - 3000:3000  # Map port 80 of the frontend container to port 3000 on the host
+      - 3000:3000
     networks:
       - dockerwebsite_app-network
 
   backend:
     container_name: dockerwebsite_backend_1
-    build: ./api
+    build:
+      context: ./api
+      dockerfile: Dockerfile
     ports:
       - 8080:8080
     environment:
@@ -41,11 +45,12 @@ services:
     container_name: dockerwebsite_nginx_1
     image: nginx:latest
     ports:
-      - 80:80  # Map port 80 of the nginx container to port 80 on the host
+      - 80:80
     volumes:
-      - ./api/nginx/nginx.conf:/etc/nginx/nginx.conf  # Mount the nginx.conf file
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
+      - backend
     networks:
       - dockerwebsite_app-network
 
