--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,14 +1,12 @@
-# Build stage
-FROM node:16-alpine as build-stage
+FROM node:16-alpine as build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# Production stage
-FROM nginx:latest as production-stage
-COPY --from=build-stage /app/build /usr/share/nginx/html
+FROM nginx:latest
+COPY --from=build /app/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
