--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,12 +1,14 @@
-FROM node:16-alpine as build
+# Build stage
+FROM node:16-alpine as build-stage
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
+RUN npm build
 
-FROM nginx:latest
-COPY --from=build /app/build /usr/share/nginx/html
+# Production stage
+FROM nginx:latest as production-stage
+COPY --from=build-stage /app/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
