--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,6 +1,6 @@
 # Build stage
 FROM node:16-alpine as build-stage
-WORKDIR /app
+WORKDIR /webapp
 COPY package*.json ./
 RUN npm install
 COPY . .
@@ -8,7 +8,7 @@ RUN npm build
 
 # Production stage
 FROM nginx:latest as production-stage
-COPY --from=build-stage /app/build /usr/share/nginx/html
+COPY --from=build-stage /webapp/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
