Chaning root folder for nginx

--- a/webapp/nginx.conf
+++ b/webapp/nginx.conf
@@ -3,7 +3,7 @@ server {
   server_name backend;
 
   location / {
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/build;
     index index.html;
     try_files $uri $uri/ /index.html;
   }
