--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /webapp
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm build
+RUN npm run build
 
 # Production stage
 FROM nginx:latest as production-stage
