adding depends on property for frontend container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - 3000:80
+    depends_on:
+      - backend
     networks:
       - dockerwebsite_app-network
 
