changing name of docker network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
 
 networks:
   dockerwebsite_app-network:
-    driver: bridge
+    name: dockerwebsite_app-network
 
 volumes:
   dbdata:
