Added categories to load products

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
-../target/
-!.mvn/wrapper/maven-wrapper.jar
+api/target/
+!api/.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,4 +31,4 @@ build/
 
 ### VS Code ###
 .vscode/
-node_modules
+webapp/node_modules/
