--- a/webapp/nginx.conf
+++ b/webapp/nginx.conf
@@ -14,14 +14,14 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-    add_header 'Access-Control-Allow-Origin' 'http://group09.web-tek.ninja:3000' always;
+    add_header 'Access-Control-Allow-Origin' 'http://group09.web-tek.ninja' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
     add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
     add_header 'Access-Control-Allow-Credentials' 'true' always;
     add_header 'Access-Control-Max-Age' '3600' always;
 
     if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' 'http://group09.web-tek.ninja:3000';
+        add_header 'Access-Control-Allow-Origin' 'http://group09.web-tek.ninja';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization';
         add_header 'Access-Control-Allow-Credentials' 'true';
