--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - SPRING_DATASOURCE_PASSWORD=postgres
     depends_on:
       - database
+    volumes:
+      - /api/.env:/app/.env
     networks:
       - dockerwebsite_app-network
 
