--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,18 +18,22 @@ services:
     build:
       context: ./api
       dockerfile: Dockerfile
+    env_file:
+      - .env
     ports:
       - 8080:8080
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/postgres
       - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=postgres
+      - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
     depends_on:
       - database
     networks:
       - dockerwebsite_app-network
 
   database:
+    env_file:
+      - .env
     container_name: database
     image: postgres:14.1-alpine
     ports:
@@ -39,7 +43,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=postgres
+      - POSTGRES_DB=${DB_PASSWORD}
     networks:
       - dockerwebsite_app-network
 
