update for the server config

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url= jdbc:postgresql://database:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.username = postgres
-#
-spring.datasource.password = ${DB_PASSWORD}
+spring.datasource.password = postgres
 
 spring.jpa.properties.hibernate.community.dialect=org.hibernate.community.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
@@ -12,6 +11,6 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 
-#secret key for JWT from .env file
-jwt.secret=${jwt_secret}
+
+jwt.secret=kpeFh5tKpP5ypf8lN1xX9S7DOPyJUUpy8iIVSX0kG4k=
 jwt.expiration=3600
