--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url= jdbc:postgresql://database:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.password = ${DB_PASSWORD}
 
 spring.jpa.properties.hibernate.community.dialect=org.hibernate.community.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
@@ -11,6 +11,3 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 
-
-jwt.secret=kpeFh5tKpP5ypf8lN1xX9S7DOPyJUUpy8iIVSX0kG4k=
-jwt.expiration=3600
