--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - 8080:8080
+    env_file:
+      - .env
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/postgres
       - SPRING_DATASOURCE_USERNAME=postgres
-      - SPRING_DATASOURCE_PASSWORD=postgres
+      - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
     depends_on:
       - database
     networks:
@@ -36,9 +38,11 @@ services:
       - 5432:5432
     volumes:
       - dbdata:/var/lib/postgresql/data
+    env_file:
+      - .env
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=postgres
     networks:
       - dockerwebsite_app-network
